2-3 로그인 폼 만들기 (1)

--- a/src/css/pages/index.css
+++ b/src/css/pages/index.css
@@ -26,3 +26,36 @@
   font-size: 0.9em;
   color: #6b4732;
 }
+
+.login .login__form {
+  width: 240px;
+  margin: 0 auto 80px;
+}
+
+.login .login__form input {
+  width: 240px;
+  height: 40px;
+  border: 1px solid #bdbdbd;
+  border-radius: 5px;
+  font-size: 0.9em;
+}
+
+.login .login__form .login__form__id {
+  padding: 3px 10px;
+  border-bottom: none;
+  border-radius: 5px 5px 0 0;
+}
+
+.login .login__form .login__form__pw {
+  padding: 3px 10px;
+  border-top: none;
+  border-radius: 0 0 5px 5px;
+}
+
+.login .login__form .login__form__bt {
+  color: #ffffff;
+  background-color: #6b4732;
+  margin-top: 6px;
+  border: 1px solid #bdbdbd;
+  cursor: pointer;
+}
