3-4 내 프로필과 친구 프로필 표시하기

--- a/src/css/pages/friends.css
+++ b/src/css/pages/friends.css
@@ -1,3 +1,22 @@
 .container {
   margin-left: 70px;
 }
+
+.my-profile .user__pic {
+  width: 60px;
+  height: 60px;
+  border-radius: 20px;
+  background-color: #edcae1;
+  margin-right: 10px;
+}
+
+.friends__menu {
+  font-size: 0.8em;
+  margin: 10px 15px;
+  border-top: 1px solid #aeaeae;
+  padding-top: 15px;
+}
+
+.friends__menu__header {
+  color: #aeaeae;
+}
