--- a/src/css/components/userlist.css
+++ b/src/css/components/userlist.css
@@ -10,7 +10,7 @@
   background-color: #f2f2f2;
 }
 
-.user__pic {
+.user__pic:not(.my-profile .user__pic) {
   width: 50px;
   height: 50px;
   border-radius: 18px;
