--- a/src/css/pages/chats.css
+++ b/src/css/pages/chats.css
@@ -1,3 +1,16 @@
 .container {
   margin-left: 70px;
 }
+
+.user-list a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.user__time {
+  position: absolute;
+  top: 10px;
+  right: 16px;
+  font-size: 0.8em;
+  color: #aeaeae;
+}
